Add real tmux conf and bashrc for it

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,135 @@
-# Keep all tmux settings in dropbox to avoid duplication
-source-file ~/Dropbox/.tmux.conf
+#
+# Settings for tmux sessions
+#
+
+# unbind-key -a
+
+# Use Alt+a as prefix rather than default CTRL-b
+set -g prefix M-a
+unbind C-b
+
+# change delay of prefix to something more VIM friendly (i.e. remove delay)
+set -s escape-time 1
+
+# set index of windows to start at 1 rather than 0
+set -g base-index 1
+
+# set panes to start at index 1 as well
+set -g pane-base-index 1
+
+# allow selection of pane, resizing of pane and selection of window with mouse
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+# avoid starting login shell in tmux
+set -g default-command $SHELL
+
+#
+# colors
+#
+
+# enable 256 colors
+set -g default-terminal "screen-256color"
+
+# status bar colors
+set -g status-fg white
+set -g status-bg black
+
+# left status bar
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+
+# right status bar
+set -g status-right "#[fg=cyan]%d %b %R"
+
+# turn on UTF8 in the status bar
+set -g status-utf8 on
+
+# tell tmux to refresh status bar every 60 seconds
+set -g status-interval 60
+
+# center window list in status bar
+set -g status-justify centre
+
+# change background of window when activity happens on it
+set -g visual-activity on
+
+# pane colors
+set -g pane-border-fg green
+set -g pane-border-bg black
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+
+# command line colors
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+#
+# Window settings
+#
+
+# !!! disabled mouse completely for learning purposes
+setw -g mode-mouse on
+
+#
+# window colors
+#
+
+# make the current window stand out more in the status bar
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+
+# change background of window when activity happens on it
+setw -g monitor-activity on
+
+# change buffer navigatoin keys to VIM style
+setw -g mode-keys vi
+
+#
+# Bindings
+#
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# If an application uses our send-prefix shortcut, do the shortcut twice to
+# have tmux forward that command to the app
+bind M-a send-prefix
+
+# split panes VIM style
+bind v split-window -h
+bind s split-window -v
+
+# navigate through panes VIM style
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# cycle through windows with Ctrl-h and Ctrl-l
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# resizing panes with VIM movements
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# copying and pasting a la VIM - note: seems to fuck things up
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
+
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# maximize / minimize pane
+unbind Up
+bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+unbind Down
+bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
