Update nginx config command && nginx.conf

--- a/nginx-scripts/nginx.conf
+++ b/nginx-scripts/nginx.conf
@@ -1,5 +1,5 @@
 
-#user  nobody;
+user  www-data www-data;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -42,8 +42,13 @@ http {
                font/truetype font/opentype;
     gzip_disable msie6;
 
-
+    # INDEX
     index  index.html index.htm;
+
+    # TEMP PATHS
+    client_body_temp_path /var/nginx/client_body_temp;
+    proxy_temp_path       /var/nginx/proxy_temp;
+    fastcgi_temp_path     /var/nginx/fastcgi_temp;
 
     # SERVER
     server {
@@ -64,12 +69,12 @@ http {
           expires 6h;
         }
 
-        location /font {
-          expires 1d;
+        location ^~ /font {
+          expires max;
         }
 
         location ^~ /vendor {
-          expires 1d;
+          expires 7d;
         }
 
         location /nginx_status {
@@ -125,6 +130,22 @@ http {
     #    }
     #}
 
+    server {
+      server_name           ec2.frontrowtest.com;
+      listen                443;
+
+      root   /var/www/classroom-web-app-build;
+
+      ssl                   on;
+      # ssl_certificate       /usr/local/nginx/conf/server.crt;
+      # ssl_certificate_key   /usr/local/nginx/conf/server.key;
+      ssl_certificate       /etc/ssl/localcerts/star.frontrowtest.com.pem;
+      ssl_certificate_key   /etc/ssl/localcerts/star.frontrowtest.com.key;
+      ssl_protocols         SSLv3 TLSv1;
+      ssl_ciphers           RC4:HIGH:!aNULL:!MD5:@STRENGTH;
+      ssl_session_cache     shared:WEB:10m;
+      ssl_prefer_server_ciphers   on;
+    }
 
     # HTTPS server
     #
