--- a/nginx-scripts/nginx.conf
+++ b/nginx-scripts/nginx.conf
@@ -1,4 +1,3 @@
-
 user  www-data www-data;
 worker_processes  1;
 
@@ -16,6 +15,8 @@ events {
 
 http {
     include       mime.types;
+    index  index.html index.htm;
+
     default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -28,7 +29,7 @@ http {
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
-    keepalive_timeout  65;
+    keepalive_timeout 3;
 
     # GZIP
     gzip on;
@@ -41,9 +42,8 @@ http {
                application/javascript application/json image/svg+xml
                font/truetype font/opentype;
     gzip_disable msie6;
-
-    # INDEX
-    index  index.html index.htm;
+    # read up on this for proxy scenario
+    # gzip_proxied
 
     # TEMP PATHS
     client_body_temp_path /var/nginx/client_body_temp;
@@ -54,29 +54,9 @@ http {
     server {
         listen       80;
         server_name  localhost;
-        root   /var/www/classroom-web-app-build;
+        # root   /var/www/classroom-web-app-build;
 
         #access_log  logs/host.access.log  main;
-
-        location / {
-        }
-
-        location = /index.html {
-          expires 5m;
-        }
-
-        location ~* /.*\.(js|css)$ {
-          expires 6h;
-        }
-
-        location ^~ /font {
-          expires max;
-        }
-
-        location ^~ /vendor {
-          expires 7d;
-        }
-
         location /nginx_status {
           stub_status on;
           access_log off;
@@ -93,80 +73,54 @@ http {
             root   html;
         }
 
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
+    server {
+      listen                80;
+      server_name           ec2.frontrowtest.com;
+      rewrite               ^ https://$server_name$request_uri? permanent;
+    }
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
+    # HTTPS virtual host for dashboard
     server {
       server_name           ec2.frontrowtest.com;
-      listen                443;
+      listen                443 ssl;
 
-      root   /var/www/classroom-web-app-build;
+      root                  /var/www/classroom-web-app-build;
 
-      ssl                   on;
-      # ssl_certificate       /usr/local/nginx/conf/server.crt;
-      # ssl_certificate_key   /usr/local/nginx/conf/server.key;
-      ssl_certificate       /etc/ssl/localcerts/star.frontrowtest.com.pem;
-      ssl_certificate_key   /etc/ssl/localcerts/star.frontrowtest.com.key;
+      location / {
+      }
+
+      error_page 404 /404.html;
+
+      location = /index.html {
+        expires 5m;
+      }
+
+      # prevent Chrome from spamming our logs with its favicon.ico requests
+      location = /favicon.ico {
+        return 204;
+        access_log off;
+        log_not_found off;
+      }
+
+      location ~* /.*\.(js|css)$ {
+        expires 6h;
+      }
+
+      location ^~ /font {
+        expires max;
+      }
+
+      location ^~ /vendor {
+        expires 7d;
+      }
+
+      ssl_certificate       /etc/ssl/localcerts/star.frontrowtest.com.cert.pem;
+      ssl_certificate_key   /etc/ssl/localcerts/star.frontrowtest.com.key.pem;
       ssl_protocols         SSLv3 TLSv1;
       ssl_ciphers           RC4:HIGH:!aNULL:!MD5:@STRENGTH;
       ssl_session_cache     shared:WEB:10m;
       ssl_prefer_server_ciphers   on;
     }
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443;
-    #    server_name  localhost;
-
-    #    ssl                  on;
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_timeout  5m;
-
-    #    ssl_protocols  SSLv2 SSLv3 TLSv1;
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers   on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
 }
