--- a/nginx-scripts/nginx.conf
+++ b/nginx-scripts/nginx.conf
@@ -77,7 +77,14 @@ http {
       root                  /var/www/landing-staging;
     }
 
-    # landing staging
+    # redirect naked domain to www subdomain
+    server {
+      listen                80;
+      server_name           frontrowed.com;
+      rewrite               ^ http://www.$server_name$request_uri? permanent;
+    }
+
+    # landing prod
     server {
       listen                80;
       server_name           www.frontrowed.com;
@@ -130,5 +137,23 @@ http {
       ssl_ciphers           RC4:HIGH:!aNULL:!MD5:@STRENGTH;
       ssl_session_cache     shared:WEB:10m;
       ssl_prefer_server_ciphers   on;
+    }
+
+    server {
+      server_name           mailer.frontrowed.com;
+      listen                80;
+
+      location / {
+        proxy_pass          http://127.0.0.1:3000;
+        proxy_set_header    Host              $host;
+        proxy_set_header    X-Real-IP         $remote_addr;
+        # proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+
+        # bypass cross-origin prevention for testing purposes
+        add_header            Access-Control-Allow-Origin *;
+        add_header            Access-Control-Allow-Methods "POST";
+        add_header            Access-Control-Max-Age 1000;
+        add_header            Access-Control-Allow-Headers "Content-Type";
+      }
     }
 }
