Update vim/tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -124,8 +124,10 @@ bind -r L resize-pane -R 5
 # copying and pasting a la VIM - note: seems to fuck things up
 # bind -t vi-copy 'v' begin-selection
 # bind -t vi-copy 'y' copy-selection
-
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+#
+# bind C-c run "tmux save-buffer - | xclip -l 1 -i -sel clipboard"
+# bind C-c run-shell "tmux save-buffer - | xclip -l 1 -i"
+bind C-c run-shell "tmux save-buffer - | xsel -b -i"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # maximize / minimize pane
@@ -133,3 +135,6 @@ unbind Up
 bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
 unbind Down
 bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+
+# nested tmux - ALT-a a will send a command through to the inner tmux
+bind a send-prefix
