Add tmux shortcut to swap order of windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -138,3 +138,7 @@ bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
 # nested tmux - ALT-a a will send a command through to the inner tmux
 bind a send-prefix
+
+# move windows to the left or right with CTRL-SHIFT-(left|right) arrow key
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
