Add extra comments to tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
 #
+# Absurdly useful commands, just so I don't forget:
+#
+# prefix + ' : select window by index
+# prefix + w : select window through interactive index
+#
 # Settings for tmux sessions
 #
 
