Update tmux config for tmux 1.9a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,13 +102,15 @@ setw -g mode-keys vi
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+bind c new-window -c '#{pane_current_path}'
+
 # If an application uses our send-prefix shortcut, do the shortcut twice to
 # have tmux forward that command to the app
 bind M-a send-prefix
 
 # split panes VIM style
-bind v split-window -h
-bind s split-window -v
+bind v split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
 
 # navigate through panes VIM style
 bind h select-pane -L
