Update to GHC 7.8.3

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ set -g mouse-select-window on
 # avoid starting login shell in tmux
 set -g default-command $SHELL
 
+# remove DISPLAY env var from default list to avoid having it unset
+set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+
 #
 # colors
 #
