--- a/.gitconfig
+++ b/.gitconfig
@@ -20,5 +20,6 @@
   lg = log -p
   master-rebase = "!f() { git checkout master && git pull && git checkout $1 && git rebase master; }; f"
   supermerge = "!f() { git checkout master && git pull && git checkout $1 && git rebase master && git checkout master && git merge $1 --ff-only && git push origin master && git push origin :$1 && git branch -d $1 && echo 'supermerged!'; }; f"
+  supermergei = "!f() { git checkout master && git pull && git checkout $1 && git rebase -i master && git checkout master && git merge $1 --ff-only && git push origin master && git push origin :$1 && git branch -d $1 && echo 'supermerged!'; }; f"
 [diff]
 	submodule = log
