--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,14 +15,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: "3.12"
 
       - name: Install tools
         run: |
           sudo apt-get update
           sudo apt-get install -y shellcheck shfmt
           python -m pip install --upgrade pip
-          python -m pip install vim-vint
+          python -m pip install setuptools vim-vint
 
       - name: Run lint checks
         run: make lint
