--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y shellcheck shfmt
           python -m pip install --upgrade pip
-          python -m pip install setuptools vim-vint
+          python -m pip install "setuptools<82" vim-vint
 
       - name: Run lint checks
         run: make lint
